--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(LongNumbers)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(LongNumbers src/main.cc
-        src/modules/natural.h
-        src/modules/natural.cc)
+        src/modules/N.h
+        src/modules/N.cc)
