--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,4 @@ project(LongNumbers)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(LongNumbers src/main.cc
-        src/modules/N.cc
-        src/modules/N.h
-        src/modules/Z.cc
-        src/modules/Z.h)
+add_executable(LongNumbers src/main.cc)
