--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(LongNumbers)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+enable_testing()
+add_subdirectory(libraries)
+
 add_executable(LongNumbers src/main.cc)
