add push main workflow trigger

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -5,6 +5,8 @@ name: CMake on a single platform
 on:
   pull_request:
     types: [ opened, reopened, synchronize ]
+  push:
+    branches: [ main ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
