--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Test
         working-directory: ${{github.workspace}}/build
-        run: ./libraries/numbers/tests
+        run: ./libraries/numbers/tests/tests --gtest_color=no
