make gtest not required

--- a/libraries/numbers/tests/CMakeLists.txt
+++ b/libraries/numbers/tests/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.28)
 
-enable_testing()
+find_package(GTest)
 
-find_package(GTest REQUIRED)
-include(GoogleTest)
+if (GTest_FOUND)
+    include(GoogleTest)
+    enable_testing()
+    add_executable(tests)
+    file(GLOB_RECURSE TEST_FILES "*.cc")
+    target_sources(tests PRIVATE ${TEST_FILES})
+    target_link_libraries(tests numbers GTest::GTest GTest::Main)
 
-add_executable(tests)
-file(GLOB_RECURSE TEST_FILES "*.cc")
-target_sources(tests PRIVATE ${TEST_FILES})
-target_link_libraries(tests numbers GTest::GTest GTest::Main)
-
-gtest_discover_tests(tests)
+    gtest_discover_tests(tests)
+else ()
+    message(STATUS "GTest not found")
+endif ()
