--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,14 @@ project(LongNumbers)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-enable_testing()
+find_package(GTest)
+if (GTest_FOUND)
+    enable_testing()
+    include(GoogleTest)
+else ()
+    message(STATUS "GTest not found")
+endif ()
+
 add_subdirectory(libraries)
 
 add_executable(LongNumbers src/main.cc)
