--- a/libraries/numbers/tests/CMakeLists.txt
+++ b/libraries/numbers/tests/CMakeLists.txt
@@ -1,16 +1,10 @@
 cmake_minimum_required(VERSION 3.28)
 
-find_package(GTest)
-
 if (GTest_FOUND)
-    include(GoogleTest)
-    enable_testing()
-    add_executable(tests)
+    add_executable(numbers_tests)
     file(GLOB_RECURSE TEST_FILES "*.cc")
-    target_sources(tests PRIVATE ${TEST_FILES})
-    target_link_libraries(tests numbers GTest::GTest GTest::Main)
+    target_sources(numbers_tests PRIVATE ${TEST_FILES})
+    target_link_libraries(numbers_tests numbers GTest::GTest GTest::Main)
 
-    gtest_discover_tests(tests)
-else ()
-    message(STATUS "GTest not found")
+    gtest_discover_tests(numbers_tests)
 endif ()
