--- a/libraries/numbers/tests/CMakeLists.txt
+++ b/libraries/numbers/tests/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.28)
 
-enable_testing()
+if (GTest_FOUND)
+    add_executable(numbers_tests)
+    file(GLOB_RECURSE TEST_FILES "*.cc")
+    target_sources(numbers_tests PRIVATE ${TEST_FILES})
+    target_link_libraries(numbers_tests numbers GTest::GTest GTest::Main)
 
-find_package(GTest REQUIRED)
-include(GoogleTest)
-
-add_executable(tests)
-file(GLOB_RECURSE TEST_FILES "*.cc")
-target_sources(tests PRIVATE ${TEST_FILES})
-target_link_libraries(tests numbers GTest::GTest GTest::Main)
-
-gtest_discover_tests(tests)
+    gtest_discover_tests(numbers_tests)
+endif ()
