fix building w/o gtest installed

--- a/libraries/numbers/CMakeLists.txt
+++ b/libraries/numbers/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.28)
 
 add_library(numbers)
-file(GLOB_RECURSE SRC_FILES "*.cc")
+file(GLOB_RECURSE SRC_FILES "src/*.cc")
 target_sources(numbers PRIVATE ${SRC_FILES})
 target_include_directories(numbers PUBLIC include PRIVATE src)
 
